Implement the hierarchy

--- a/Software/CleaningSolutions/CleaningSolutions/CleaningSolutions.csproj
+++ b/Software/CleaningSolutions/CleaningSolutions/CleaningSolutions.csproj
@@ -58,6 +58,9 @@
     <Compile Include="FrmWorkers.Designer.cs">
       <DependentUpon>FrmWorkers.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\Owner.cs" />
+    <Compile Include="Models\Person.cs" />
+    <Compile Include="Models\Worker.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FrmLogin.resx">
