--- a/Software/CleaningSolutions/CleaningSolutions/CleaningSolutions.csproj
+++ b/Software/CleaningSolutions/CleaningSolutions/CleaningSolutions.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Models\Worker.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Models\WorkerRepository.cs" />
     <EmbeddedResource Include="FrmLogin.resx">
       <DependentUpon>FrmLogin.cs</DependentUpon>
     </EmbeddedResource>
