--- a/Software/CleaningSolutions/CleaningSolutions/CleaningSolutions.csproj
+++ b/Software/CleaningSolutions/CleaningSolutions/CleaningSolutions.csproj
@@ -71,6 +71,9 @@
     <EmbeddedResource Include="FrmLogin.resx">
       <DependentUpon>FrmLogin.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FrmWorkers.resx">
+      <DependentUpon>FrmWorkers.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
