--- a/Software/CleaningSolutions/CleaningSolutions/CleaningSolutions.csproj
+++ b/Software/CleaningSolutions/CleaningSolutions/CleaningSolutions.csproj
@@ -65,6 +65,12 @@
     <Compile Include="Models\Owner.cs" />
     <Compile Include="Models\Person.cs" />
     <Compile Include="Models\Worker.cs" />
+    <Compile Include="FrmNewWorker.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmNewWorker.Designer.cs">
+      <DependentUpon>FrmNewWorker.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\WorkerRepository.cs" />
@@ -73,6 +79,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmWorkers.resx">
       <DependentUpon>FrmWorkers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmNewWorker.resx">
+      <DependentUpon>FrmNewWorker.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
